parser/src/snapshots/rapidus_parser__try_catch1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: Try(
                    Node {
                        base: Block(
                            [],
                        ),
                        loc: Loc(line:1,column:5,pos:5),
                    },
                    Node {
                        base: StatementList(
                            [],
                        ),
                        loc: Loc(line:1,column:16,pos:16),
                    },
                    Node {
                        base: Identifier(
                            "e",
                        ),
                        loc: Loc(line:1,column:13,pos:13),
                    },
                    Node {
                        base: Block(
                            [],
                        ),
                        loc: Loc(line:1,column:26,pos:26),
                    },
                ),
                loc: Loc(line:1,column:4,pos:4),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
