parser/src/snapshots/rapidus_parser__while_.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: While(
                    Node {
                        base: Boolean(
                            true,
                        ),
                        loc: Loc(line:1,column:7,pos:7),
                    },
                    Node {
                        base: Block(
                            [],
                        ),
                        loc: Loc(line:1,column:15,pos:15),
                    },
                ),
                loc: Loc(line:1,column:6,pos:6),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
